--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 scrapy = "^2.11.2"
+uvicorn = "^0.30.3"
+requests = "^2.32.3"
+flask = "^3.0.3"
 
 
 [build-system]
