--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
       run: echo "TAG=$(date +%s)" >> $GITHUB_ENV
 
     - name: Build the Docker image
-      run: docker build . --file car_pred/Dockerfile --tag chidubem/car-pred_app:${{ env.TAG }}
+      run: docker build . --file Dockerfile --tag chidubem/car-pred_app:${{ env.TAG }}
 
     - name: Push the Docker image
       run: docker push chidubem/car-pred_app:${{ env.TAG }}
